added .pak to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# dos2 mod archives
+.pak
+
+#### Auto-generated python stuff below ####
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
