--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,22 @@
-name: Package Application with Pyinstaller
-
 on:
   push:
-    branches: [ release-test ]
-  pull_request:
-    branches: [ release-test ]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: 'windows-latest'
+    strategy:
+      fail-fast: false
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Package Application
-      uses: JackMcKew/pyinstaller-action-windows@main
+    - uses: actions/setup-python@v2
       with:
-        path: ./
+        python-version: 3.7
 
+    - run: pip install -r requirements.txt pyinstaller
+    - run: pyinstaller --onefile mod_updater.py
+    # Optionally verify that it works (provided that it does not need user interaction)
+    # - ./dist/mod_updater/mod_updater
     - uses: actions/upload-artifact@v2
       with:
-        name: name-of-artifact
-        path: src/dist/windows
+        path: dist/*
