--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,38 @@ jobs:
       fail-fast: false
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
 
-    - run: pip install -r requirements.txt pyinstaller
-    - run: pyinstaller --onefile mod_updater.py
-    # Optionally verify that it works (provided that it does not need user interaction)
-    # - ./dist/mod_updater/mod_updater
-    - run: cp mod_updater_config.yaml dist/
-    - uses: actions/upload-artifact@v2
-      with:
-        name: "mod_updater_${{github.ref_name}}"
-        path: dist/*
+      - run: pip install -r requirements.txt pyinstaller
+      - run: pyinstaller --onefile mod_updater.py
+      # Optionally verify that it works (provided that it does not need user interaction)
+      # - ./dist/mod_updater/mod_updater
+      - run: cp mod_updater_config.yaml dist/
+      - uses: actions/upload-artifact@v2
+        with:
+          name: "mod_updater_${{github.ref_name}}"
+          path: dist/*
+
+      - name: release
+          uses: actions/create-release@v1
+          id: create_release
+          with:
+            draft: false
+            prerelease: false
+            release_name: "TEST RELEASE DOS2 Mod Updater ${{github.ref_name}}"
+            tag_name: ${{ github.ref }}
+            body_path: CHANGELOG.md
+          env:
+            GITHUB_TOKEN: ${{ github.token }}
+      - name: upload windows artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/
+          asset_name: mod_updater_${{github.ref_name}}.zip
+          asset_content_type: application/zip
