--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/
+          asset_path: ./dist/mod_updater_${{github.ref_name}}.zip
           asset_name: mod_updater_${{github.ref_name}}.zip
           asset_content_type: application/zip
